--- a/html/index.html
+++ b/html/index.html
@@ -12,18 +12,17 @@
     <div class="forms">
         <form action="#" class="form">
           <span class="form-header">Login</span>
-          <input type="text" id="username" placeholder=" نام و نام خانوادگی">
-          <input type="text" id="useremail" placeholder="ایمیل">
+          <input type="text" id="username" placeholder=" ایمیل یا نام و نام خانوادگی">
           <input type="password" id="password" placeholder="پسورد">
-          <input type="submit" id="submit">
+          <input type="submit" id="submit" value="Login">
           <div class="form-footer">
-            <div class="form-footer__rememberMe">
-              <label for="form-footer__rememberMe-text" class="form-footer__rememberMe-text">Remember Me</label for="form-footer__rememberMe-text">
-              <input type="checkbox" name="rememberMe" id="form-footer__rememberMe-text">
-            </div>
             <span class="form-footer__signUp">
               <a href="#" class="form-footer__signUp-link">Sign Up</a>
             </span>
+            <div class="form-footer__rememberMe">
+              <input type="checkbox" name="rememberMe" id="form-footer__rememberMe-text">
+              <label for="form-footer__rememberMe-text" class="form-footer__rememberMe-text">Remember Me</label for="form-footer__rememberMe-text">
+            </div>
           </div>
         </form>
     </div>
