create signin.html and set validation for inputs

--- a/html/index.html
+++ b/html/index.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login form</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css" />
-  </head>
-  <body>
-    <div class="forms">
-        <form action="#" class="form">
-          <span class="form-header">Login</span>
-          <input type="text" id="username" placeholder=" ایمیل یا نام و نام خانوادگی">
-          <input type="password" id="password" placeholder="پسورد">
-          <input type="submit" id="submit" value="Login">
-          <div class="form-footer">
-            <span class="form-footer__signUp">
-              <a href="#" class="form-footer__signUp-link">Sign Up</a>
-            </span>
-            <div class="form-footer__rememberMe">
-              <input type="checkbox" name="rememberMe" id="form-footer__rememberMe-text">
-              <label for="form-footer__rememberMe-text" class="form-footer__rememberMe-text">Remember Me</label for="form-footer__rememberMe-text">
-            </div>
-          </div>
-        </form>
-    </div>
-    <script src="../js/script.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>wellcome</h1>
+</body>
 </html>
