--- a/html/signup.html
+++ b/html/signup.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signin form</title>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
 
+    <link rel="stylesheet" href="../swipper/sweetalert2@11.js">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/signin.css"/>
   </head>
@@ -21,7 +22,7 @@
           <input type="submit" id="submit" value="Sign in">
           <div class="form-footer">
             <span class="form-footer__signUp">
-              <a href="#" class="form-footer__signUp-link">Sign Up</a>
+              <a href="login.html" class="form-footer__signUp-link">Login</a>
             </span>
             <div class="form-footer__rememberMe">
               <input type="checkbox" name="rememberMe" id="form-footer__rememberMe-text">
@@ -30,7 +31,8 @@
           </div>
         </form>
     </div>
-    <link rel="stylesheet" href="../swipper/sweetalert2@11.js">
-    <script src="../js/script.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/signup.js"></script>
   </body>
 </html>
